--- a/public/front-theme/css/index.css
+++ b/public/front-theme/css/index.css
@@ -3,14 +3,18 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 header {
     display: flex;
     /* border: 2px solid; */
-    width: 1496px;
+    width: 100%;
     height: 111px;
+    box-sizing: border-box;
 }
-
+/* #nav_bar ul li:nth-child(4){
+position: absolute;
+float: right;
+margin-left: 300px;
+} */
 #logo {
     margin: 10px 0 0 50px;
     max-height: inherit;
@@ -29,6 +33,15 @@ header {
     font: 15px Helvetica;
     font-weight: bold;
     padding: 30px 50px;
+}
+/* .icon-cart{
+    position: inherit;
+    margin-top: 40px;
+    margin-left: 400px;
+} */
+.cart-hover{
+    width: 250px;
+    border: 1px solid;
 }
 
 #login {
@@ -152,6 +165,25 @@ select {
     font-weight: bold;
     margin: 40px 0 20px 0;
 }
+.add-cart{
+    display: none;
+    border: 1px solid;
+    border-radius: 15px;
+    width: 150px;
+    position: absolute;
+    font-size: 25px;
+    background-color: white;
+    margin: -40px 0 0 60px;
+}
+.product_image>img:hover + .add-cart {
+    display: block;
+    cursor: pointer;
+}
+.add-cart>a{
+    color: black;
+    cursor: pointer;
+    margin-left: 25px;
+}
 .list_products{
     display: grid;
     grid-template-columns: auto auto auto auto;
@@ -160,6 +192,8 @@ select {
     margin-left: 25px;
 }
 .product_image>img{
+    /* position: relative; */
+    z-index: 1;
     border-radius: 15px;
 }
 .name_product{
@@ -201,18 +235,76 @@ footer{
     margin-top: 20px;
 }
 .middle-title{
-    /* text-align: center; */
     margin: 20px 0;
     font-size: 20px;
 }
 .footer-middle-link ul {
     list-style: none;
-    /* width: 65%;
-    margin: 0 auto;
-    border: 1px solid; */
 }
 .footer-middle-link  li{
     font-size: 15px;
-    margin-top: 10px;
+    margin-top: 10px;  
+}
+ .cart-hover{
+    width: 350px;
     
+    background-color: white;
+}
+.select-items{
+    width: 90%;
+    margin: auto;
+    margin-top: 20px;
+}
+.si-pic{   
+    width: 100px;
+    height: 100px;
+}
+
+.select-total{
+    width: 80%;
+    margin: auto;
+    display: flex;
+}
+.select-total>h5{
+    margin-left: 100px;
+}
+.view-card,.checkout-btn{
+    width: 100%;
+    height: 40px;
+    background-color: black;   
+    margin: 15px 0;
+}
+.checkout-btn{
+    background-color: #e7ab3c;
+}
+
+.view-card>a,.checkout-btn>a{
+text-decoration: none;
+position: relative;
+color: white; 
+margin-right: 130px;
+margin-top: 200px;  
+}
+.cart-icon{
+    list-style: none;
+    position: relative;
+}
+.cart-icon:hover .cart-hover{
+    display: block;
+}
+
+.cart-hover{
+    display: none;
+    margin-left: -250px;
+    margin-top: 20px;
+
+}
+.cart-icon>a{
+    display: flex;
+}
+.text-right{
+    position: absolute;
+    display: flex;
+    margin-top: 40px;
+    margin-left: 1200px;
 }
