--- a/public/front-theme/css/index.css
+++ b/public/front-theme/css/index.css
@@ -46,7 +46,7 @@ margin-left: 300px;
 
 #login {
     margin: 27px;
-    float: right;
+    position: relative;
     margin-left: auto;
     display: flex;
     flex-direction: column;
