edit frontend addCart

--- a/public/theme-frontwatch/css/index.css
+++ b/public/theme-frontwatch/css/index.css
@@ -77,7 +77,7 @@ header{
 }
 .header-cart-item{
     display: flex;
-    margin-top: 10px;
+    padding-bottom: 30px;
 }
 .header-cart-image{
     width: 50px;
@@ -98,10 +98,19 @@ header{
     top: 80%;
     right: 0;
 }
-.delete-item>i{
-position: relative;
-margin-left: 25px;
-margin-top: 10px;
+.delete-item{
+    position: absolute;
+    right: 10px;
+}
+.list_cart{
+ height: 30px;
+ text-align: center;
+ background-color: yellow;
+}
+.list_cart>a{
+    color: black;
+    font-weight: bold;
+    text-decoration: none;
 }
 .login{
     margin-left: 30px;
